discussion/kv_engine/141635/141635_rev42_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Define bootstrap interface [2.2/3]

Define a bootstrap interface during startup and allow
for starting up without any interfaces.

Change-Id: I1bf375dedddfd20902607e235bb0aaadb0d835e5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-09 17:31:16.000000000
Message: 
Uploaded patch set 42.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-09 18:29:30.000000000
Message: 
Patch Set 42: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9693/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9693/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9693/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8289/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36655/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/228/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31327/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10341/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19272/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11268/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11687/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11416/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
